--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div>Values</div>
             <div id="separator-values" class="knob_wrap">
                 <div class="knob">
-                    <input type="checkbox" id="check-val" class="checkbox" checked="">
+                    <input type="checkbox" data-id="check-val" id="check-val" class="checkbox" checked="">
                     <label for="check-val"></label>
                 </div>
                 <div class="choice">Comma</div>
@@ -48,7 +48,7 @@
             <div>Transparency</div>
             <div id="separator-trans" class="knob_wrap">
                 <div class="knob">
-                    <input type="checkbox" id="check-trans" class="checkbox" checked="">
+                    <input type="checkbox" data-id="check-trans" id="check-trans" class="checkbox" checked="">
                     <label for="check-trans"></label>
                 </div>
                 <div class="choice">Comma</div>
@@ -58,21 +58,21 @@
         <div class="ligne">
             <div>Force transparency <span>(rgb<em>a</em>, hsl<em>a</em>)</span></div>
             <div class="toggle">
-                <input type="checkbox" id="force-trans" class="checkbox">
+                <input type="checkbox" data-id="force-trans" id="force-trans" class="checkbox">
                 <label for="force-trans"></label>
             </div>
         </div>
         <div class="ligne">
             <div>RGB Percentages</div>
             <div class="toggle">
-                <input type="checkbox" id="rgb-perc" class="checkbox">
+                <input type="checkbox" data-id="rgb-perc" id="rgb-perc" class="checkbox">
                 <label for="rgb-perc"></label>
             </div>
         </div>
         <div class="ligne">
             <div>HSL Degrees</div>
             <div class="toggle">
-                <input type="checkbox" id="hsl-deg" class="checkbox">
+                <input type="checkbox" data-id="hsl-deg" id="hsl-deg" class="checkbox">
                 <label for="hsl-deg"></label>
             </div>
         </div>
