--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎨 Color conversion 🎨</title>
     <link rel="stylesheet" href="./css/sty.css">
+    <link rel="stylesheet" href="./css/modal.css">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
             <button class="copy">Copy</button>
         </section>
     </main>
-    <div id="settings">
+    <div id="settings" class="modal modal-bottom">
         <div class="ligne">
             <div>Separator</div>
             <div id="separator-values" class="knob_wrap">
@@ -44,7 +45,7 @@
             </div>
         </div>
         <div class="ligne">
-            <div>Force transparency <span>(rgb<em>a</em>, hsl<em>a</em>)</span></div>
+            <div>Force transparency<br><span>(rgb<strong>a</strong>, hsl<strong>a</strong>)</span></div>
             <div class="toggle">
                 <input type="checkbox" data-id="force-trans" id="force-trans" class="checkbox">
                 <label for="force-trans"></label>
@@ -65,6 +66,8 @@
             </div>
         </div>
     </div>
+    <div id="cog"></div>
+    <script src="./js/agmodal.js"></script>
     <script src="./js/namedColors.js"></script>
     <script src="./js/myColor.js"></script>
     <script src="./js/main.js"></script>
