--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div>Separator</div>
             <div id="separator-values" class="knob_wrap">
                 <div class="knob">
-                    <input type="checkbox" data-id="check-val" id="check-val" class="checkbox" checked>
+                    <input type="checkbox" data-id="check-val" id="check-val" class="hidden" checked>
                     <label for="check-val"></label>
                 </div>
                 <div class="choice">Comma</div>
@@ -47,21 +47,21 @@
         <div class="ligne">
             <div>Force transparency<br><span>(rgb<strong>a</strong>, hsl<strong>a</strong>)</span></div>
             <div class="toggle">
-                <input type="checkbox" data-id="force-trans" id="force-trans" class="checkbox">
+                <input type="checkbox" data-id="force-trans" id="force-trans" class="hidden">
                 <label for="force-trans"></label>
             </div>
         </div>
         <div class="ligne">
             <div>RGB Percentages</div>
             <div class="toggle">
-                <input type="checkbox" data-id="rgb-perc" id="rgb-perc" class="checkbox">
+                <input type="checkbox" data-id="rgb-perc" id="rgb-perc" class="hidden">
                 <label for="rgb-perc"></label>
             </div>
         </div>
         <div class="ligne">
             <div>HSL Degrees</div>
             <div class="toggle">
-                <input type="checkbox" data-id="hsl-deg" id="hsl-deg" class="checkbox">
+                <input type="checkbox" data-id="hsl-deg" id="hsl-deg" class="hidden">
                 <label for="hsl-deg"></label>
             </div>
         </div>
