--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <main class="disabled">
         <section id="leInput">
             <label for="clr-input">Entrée !</label>
-            <input type="text" name="clr-input" id="clr-input" list="colors-list"   autocapitalize="off" autocorrect="off" spellcheck="false">
+            <input type="text" name="clr-input" id="clr-input" list="colors-list" autocapitalize="off" autocorrect="off"
+                spellcheck="false">
             <datalist id="colors-list"></datalist>
         </section>
         <section id="leHex" class="col">
@@ -32,37 +33,40 @@
             <button class="copy">Copy</button>
         </section>
     </main>
-    <div id="settings" class="modal modal-bottom">
-        <div class="ligne">
-            <div>Separator</div>
-            <div id="separator-values" class="knob_wrap">
-                <div class="knob">
-                    <input type="checkbox" data-id="check-val" id="check-val" class="hidden" checked>
-                    <label for="check-val"></label>
+    <div id="panel" class="modal modal-bottom">
+        <h2>Settings</h2>
+        <div id="settings">
+            <div class="ligne">
+                <div>Separator</div>
+                <div id="separator-values" class="knob_wrap">
+                    <div class="knob">
+                        <input type="checkbox" data-id="check-val" id="check-val" class="hidden" checked>
+                        <label for="check-val"></label>
+                    </div>
+                    <div class="choice">Comma</div>
+                    <div class="choice disabled">Space</div>
                 </div>
-                <div class="choice">Comma</div>
-                <div class="choice disabled">Space</div>
             </div>
-        </div>
-        <div class="ligne">
-            <div>Force transparency<br><span>(rgb<strong>a</strong>, hsl<strong>a</strong>)</span></div>
-            <div class="toggle">
-                <input type="checkbox" data-id="force-trans" id="force-trans" class="hidden">
-                <label for="force-trans"></label>
+            <div class="ligne">
+                <div>Force transparency<br><span>(rgb<strong>a</strong>, hsl<strong>a</strong>)</span></div>
+                <div class="toggle">
+                    <input type="checkbox" data-id="force-trans" id="force-trans" class="hidden">
+                    <label for="force-trans"></label>
+                </div>
             </div>
-        </div>
-        <div class="ligne">
-            <div>RGB Percentages</div>
-            <div class="toggle">
-                <input type="checkbox" data-id="rgb-perc" id="rgb-perc" class="hidden">
-                <label for="rgb-perc"></label>
+            <div class="ligne">
+                <div>RGB Percentages</div>
+                <div class="toggle">
+                    <input type="checkbox" data-id="rgb-perc" id="rgb-perc" class="hidden">
+                    <label for="rgb-perc"></label>
+                </div>
             </div>
-        </div>
-        <div class="ligne">
-            <div>HSL Degrees</div>
-            <div class="toggle">
-                <input type="checkbox" data-id="hsl-deg" id="hsl-deg" class="hidden">
-                <label for="hsl-deg"></label>
+            <div class="ligne">
+                <div>HSL Degrees</div>
+                <div class="toggle">
+                    <input type="checkbox" data-id="hsl-deg" id="hsl-deg" class="hidden">
+                    <label for="hsl-deg"></label>
+                </div>
             </div>
         </div>
     </div>
